build/00009/H4P_Generic_SQUAWK_esp32s3.log
Processing esp32s3 (board: esp32-s3-devkitc-1; platform: https://github.com/pioarduino/platform-espressif32/releases/download/55.03.35/platform-espressif32.zip; framework: arduino)
--------------------------------------------------------------------------------
Verbose mode can be enabled via `-v, --verbose` option
CONFIGURATION: https://docs.platformio.org/page/boards/espressif32/esp32-s3-devkitc-1.html
PLATFORM: Espressif 32 (55.3.35) > Espressif ESP32-S3-DevKitC-1-N8 (8 MB QD, No PSRAM)
HARDWARE: ESP32S3 240MHz, 320KB RAM, 8MB Flash
DEBUG: Current (esp-builtin) On-board (esp-builtin) External (cmsis-dap, esp-bridge, esp-prog, iot-bus-jtag, jlink, minimodule, olimex-arm-usb-ocd, olimex-arm-usb-ocd-h, olimex-arm-usb-tiny-h, olimex-jtag-tiny, tumpa)
PACKAGES: 
 - contrib-piohome @ 3.4.4 
 - framework-arduinoespressif32 @ 3.3.5 
 - framework-arduinoespressif32-libs @ 5.5.0+sha.366dadf354 
 - tool-esp-rom-elfs @ 2024.10.11 
 - tool-esptoolpy @ 5.1.0 
 - tool-mklittlefs @ 3.2.0 
 - toolchain-xtensa-esp-elf @ 14.2.0+20251107
Converting H4P_Generic_SQUAWK.ino
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ chain, Compatibility ~ soft
Found 50 compatible libraries
Scanning dependencies...
Dependency Graph
|-- H4 @ 4.0.9+sha.6f2f510
|-- H4Tools @ 0.0.16+sha.47ce091
|-- H4AsyncTCP @ 0.0.25+sha.231be9d
|-- H4AsyncMQTT @ 1.0.0-rc12+sha.9d2b784
|-- ArmadilloHTTP @ 0.1.9+sha.ac5bf86
|-- H4AsyncWebServer @ 0.0.13+sha.fcbce26
|-- H4Plugins @ 3.5.7+sha.0ad6c2a
Building in release mode
Compiling .pio/build/esp32s3/src/H4P_Generic_SQUAWK.ino.cpp.o
In file included from /home/runner/work/h4plugins/h4plugins/build/esp32s3/src/H4P_Generic_SQUAWK.ino:2:
.pio/libdeps/esp32s3/H4Plugins/src/H4Plugins.h:6:76: note: '#pragma message: Using Wifi AP - Make sure you have made arrangements!'
    6 |     #pragma message("Using Wifi AP - Make sure you have made arrangements!")
      |                                                                            ^
/home/runner/work/h4plugins/h4plugins/build/esp32s3/src/H4P_Generic_SQUAWK.ino:29:36: error: no matching function for call to 'H4P_WiFi::H4P_WiFi(const char*&, const char*&)'
   29 | H4P_WiFi h4wifi(WIFI_SSID,WIFI_PASS);
      |                                    ^
In file included from .pio/libdeps/esp32s3/H4Plugins/src/H4P_AsyncMQTT.h:34,
                 from .pio/libdeps/esp32s3/H4Plugins/src/H4Plugins.h:10:
.pio/libdeps/esp32s3/H4Plugins/src/H4P_WiFi.h:133:9: note: candidate: 'H4P_WiFi::H4P_WiFi(const std::string&)'
  133 |         H4P_WiFi(const std::string& device=""):
      |         ^~~~~~~~
.pio/libdeps/esp32s3/H4Plugins/src/H4P_WiFi.h:133:9: note:   candidate expects 1 argument, 2 provided
.pio/libdeps/esp32s3/H4Plugins/src/H4P_WiFi.h:63:7: note: candidate: 'H4P_WiFi::H4P_WiFi(const H4P_WiFi&)'
   63 | class H4P_WiFi: public H4Service, public H4AsyncWebServer {
      |       ^~~~~~~~
.pio/libdeps/esp32s3/H4Plugins/src/H4P_WiFi.h:63:7: note:   candidate expects 1 argument, 2 provided
.pio/libdeps/esp32s3/H4Plugins/src/H4P_WiFi.h:63:7: note: candidate: 'H4P_WiFi::H4P_WiFi(H4P_WiFi&&)'
.pio/libdeps/esp32s3/H4Plugins/src/H4P_WiFi.h:63:7: note:   candidate expects 1 argument, 2 provided
/home/runner/work/h4plugins/h4plugins/build/esp32s3/src/H4P_Generic_SQUAWK.ino:30:51: error: no matching function for call to 'H4P_AsyncMQTT::H4P_AsyncMQTT(const char*&, const char*&, const char*&)'
   30 | H4P_AsyncMQTT mqtt(MQTT_SERVER,MQTT_USER,MQTT_PASS);
      |                                                   ^
.pio/libdeps/esp32s3/H4Plugins/src/H4P_AsyncMQTT.h:71:9: note: candidate: 'H4P_AsyncMQTT::H4P_AsyncMQTT(H4P_LWT)'
   71 |         H4P_AsyncMQTT(H4P_LWT lwt={"","",0,false}): _lwt(lwt), H4Service(mqttTag(),H4PE_GVCHANGE|H4PE_VIEWERS|H4PE_BLESINIT){
      |         ^~~~~~~~~~~~~
.pio/libdeps/esp32s3/H4Plugins/src/H4P_AsyncMQTT.h:71:9: note:   candidate expects 1 argument, 3 provided
.pio/libdeps/esp32s3/H4Plugins/src/H4P_AsyncMQTT.h:46:7: note: candidate: 'H4P_AsyncMQTT::H4P_AsyncMQTT(const H4P_AsyncMQTT&)'
   46 | class H4P_AsyncMQTT: public H4Service, public H4AsyncMQTT{
      |       ^~~~~~~~~~~~~
.pio/libdeps/esp32s3/H4Plugins/src/H4P_AsyncMQTT.h:46:7: note:   candidate expects 1 argument, 3 provided
.pio/libdeps/esp32s3/H4Plugins/src/H4P_AsyncMQTT.h:46:7: note: candidate: 'H4P_AsyncMQTT::H4P_AsyncMQTT(H4P_AsyncMQTT&&)'
.pio/libdeps/esp32s3/H4Plugins/src/H4P_AsyncMQTT.h:46:7: note:   candidate expects 1 argument, 3 provided
/home/runner/work/h4plugins/h4plugins/build/esp32s3/src/H4P_Generic_SQUAWK.ino:13:16: error: 'D6' was not declared in this scope; did you mean 'T6'?
   13 | #define SQUAWK D6
      |                ^~
/home/runner/work/h4plugins/h4plugins/build/esp32s3/src/H4P_Generic_SQUAWK.ino:32:52: note: in expansion of macro 'SQUAWK'
   32 | H4P_ConditionalSwitch h4onof([](){ return armed; },SQUAWK,ACTIVE_HIGH);
      |                                                    ^~~~~~
/home/runner/work/h4plugins/h4plugins/build/esp32s3/src/H4P_Generic_SQUAWK.ino:11:15: error: 'D1' was not declared in this scope; did you mean 'y1'?
   11 | #define LIGHT D1
      |               ^~
/home/runner/work/h4plugins/h4plugins/build/esp32s3/src/H4P_Generic_SQUAWK.ino:36:15: note: in expansion of macro 'LIGHT'
   36 | h4pPolled ark(LIGHT,INPUT,ACTIVE_HIGH,5000);
      |               ^~~~~
/home/runner/work/h4plugins/h4plugins/build/esp32s3/src/H4P_Generic_SQUAWK.ino:12:15: error: 'D2' was not declared in this scope; did you mean 'T2'?
   12 | #define ARMED D2
      |               ^~
/home/runner/work/h4plugins/h4plugins/build/esp32s3/src/H4P_Generic_SQUAWK.ino:37:17: note: in expansion of macro 'ARMED'
   37 | h4pOutput alert(ARMED,ACTIVE_HIGH,H4P_UILED_RED);
      |                 ^~~~~
/home/runner/work/h4plugins/h4plugins/build/esp32s3/src/H4P_Generic_SQUAWK.ino: In function 'uint32_t arm(std::vector<std::__cxx11::basic_string<char> >)':
/home/runner/work/h4plugins/h4plugins/build/esp32s3/src/H4P_Generic_SQUAWK.ino:42:22: error: 'armingStateChange' was not declared in this scope
   42 |         if(b!=armed) armingStateChange(b);
      |                      ^~~~~~~~~~~~~~~~~
/home/runner/work/h4plugins/h4plugins/build/esp32s3/src/H4P_Generic_SQUAWK.ino: In function 'void onGPIO(int, int)':
/home/runner/work/h4plugins/h4plugins/build/esp32s3/src/H4P_Generic_SQUAWK.ino:11:15: error: 'D1' was not declared in this scope; did you mean 'y1'?
   11 | #define LIGHT D1
      |               ^~
/home/runner/work/h4plugins/h4plugins/build/esp32s3/src/H4P_Generic_SQUAWK.ino:60:41: note: in expansion of macro 'LIGHT'
   60 | void onGPIO(int pin,int value){ if(pin==LIGHT) armingStateChange(value); }
      |                                         ^~~~~
*** [.pio/build/esp32s3/src/H4P_Generic_SQUAWK.ino.cpp.o] Error 1
========================== [FAILED] Took 9.76 seconds ==========================
Environment    Status    Duration
-------------  --------  ------------
esp32s3        FAILED    00:00:09.764
==================== 1 failed, 0 succeeded in 00:00:09.764 ====================